@startuml

class Users {
   +nom_usuari: String
   +correu: String
   +password: String
   +telefon: String
   +data_naixement: Date
   +rol: String
   +foto_perfil: String
   +trofeus: Integer
   +data_registre: Date
   +tipusUsuari_id: TipusUsuari
}

class TipusUsuari {
   +tipus: String
   +permisos: String
}

class Mapa {
   +nom: String
   +mapa: String
}

class mapas_modes {
   +mapa_id: int
   +mode_joc_id: int
}

class Equips {
   +nom: String
   +regio: String
   +foto_equip: String
   +trofeus: Integer
   +data_creacio: Date
   +descripcio: String
   +maxim_integrants: Integer
}

class Torneig {
   +nom: String
   +participats: Integer
   +tipus: String
   +data_inici: Date
   +data_fi: Date
   +estat: String
   +modeJoc_id: Integer
   +quantitat_partides: Integer
   +numero_equips: int
}

class premi_torneig {
   +premi_id: Integer
   +torneig_id: Integer
}

class equip_torneig {
   +equip_id: Integer
   +torneig_id: Integer
}

class equips_Users {
   +usuariId: Integer
   +equipId: Integer
}

class Joc {
   +nom: String
   +categoria: String
   +plataforma: String
   +foto: String
}

class ModeDeJoc {
   +nom: String
   +descripcio: String
   +tipus: String
   +jocId: Integer
}

class Partida {
   +id_partida: Integer
   +data_hora: DateTime
   +resultat_equip_id: int
   +posicio_partida: Integer
}

class Premi {
   +tipus: String
   +valor: String
}

class Partida_Equip {
   +equip_id: int
   +partida_id: int
   +posicio_final: int
}

Users "0..1" o-- "1" TipusUsuari : té
Torneig "*" --> "1" ModeDeJoc : pertany a
ModeDeJoc "*" --> "1" Joc : pertany a

Torneig "1" o-- "*" equip_torneig : inclou
equip_torneig "*" --> "1" Equips : representa

Equips "1" o-- "*" equips_Users : inclou
equips_Users "*" --> "1" Users : pertany a

Torneig "1" o-- "*" premi_torneig : conté
premi_torneig "*" --> "1" Premi : atorga

Torneig "1" o-- "*" Partida : inclou

Mapa "*" o-- "*" mapas_modes : està associat
mapas_modes "*" --> "*" ModeDeJoc : disponible en

Partida_Equip "*" --> "1" Partida : pertany a
Equips "1" --> "*" Partida_Equip : juga

@enduml
